fix overflow

--- a/api/public/css/stylesheet.css
+++ b/api/public/css/stylesheet.css
@@ -19,7 +19,7 @@ html, body {
 
 .mainvideo {
     width: 50%;
-    /* float: left; */
+    float: left;
     height: 500px;
     border: 1px solid blue;
     margin-right: 10px;
@@ -28,7 +28,7 @@ html, body {
 
 .lastpicture {
     width: 40%;
-    /* float: left; */
+    float: right;
     height: 400px;
     border: 1px solid red;
     padding: 10px;
